--- a/public/entry.html
+++ b/public/entry.html
@@ -66,6 +66,10 @@
       <div class="b tc f7">
         Interest Rate % based on 30-Year Fixed: <a href="https://www.navyfederal.org/assets/rates/printMortRatesAll.php" target="_blank" class="blue link">Source</a>
       </div>
+      <div class="form-group">
+        <label for="exampleFormControlTextarea1">Comments</label>
+        <textarea class="form-control" id="exampleFormControlTextarea1"></textarea>
+      </div>
       <button class="f6 link dim br-pill ph3 pv2 mv4 dib white bg-dark-blue input-reset bw0 pointer w-100"
         id="updateBtn" type="button">Update</button>
     </form>
