--- a/public/survey-form.html
+++ b/public/survey-form.html
@@ -63,6 +63,89 @@
     .f6 {
     font-size: .875rem;
     } */
+
+
+    /* ROB CSS */
+    .chat-button {
+  background-color: #555;
+  color: white;
+  padding: 16px 20px;
+  border: none;
+  cursor: pointer;
+  opacity: 0.8;
+  position: fixed;
+  bottom: 23px;
+  right: 28px;
+  width: 280px;
+}
+
+/* The popup chat - hidden by default */
+.chat-popup {
+  display: none;
+  position: fixed;
+  bottom: 0;
+  right: 15px;
+  border: 3px solid #f1f1f1;
+  z-index: 9;
+}
+
+/* Add styles to the form container */
+.form-container {
+  max-width: 300px;
+  padding: 10px;
+  background-color: white;
+}
+
+/* When the textarea gets focus, do something */
+.form-container textarea:focus {
+  background-color: #ddd;
+  outline: none;
+}
+
+#email-text {
+  width: 100%;
+  padding: 15px;
+  margin: 5px 0 22px 0;
+  border: none;
+  background: #f1f1f1;
+  resize: none;
+  min-height: 10px;
+}
+
+#msg-text {
+  width: 100%;
+  padding: 15px;
+  margin: 5px 0 22px 0;
+  border: none;
+  background: #f1f1f1;
+  resize: none;
+  min-height: 150px;
+}
+/* Set a style for the submit/send button */
+.form-container .btn {
+  background-color: #4CAF50;
+  color: white;
+  padding: 16px 20px;
+  border: none;
+  cursor: pointer;
+  width: 100%;
+  margin-bottom:10px;
+  opacity: 0.8;
+}
+
+/* Add a red background color to the cancel button */
+.form-container .cancel {
+  background-color: red;
+}
+
+/* Add some hover effects to buttons */
+.form-container .btn:hover, .open-button:hover {
+  opacity: 1;
+}
+
+
+    /* ROB CSS END */
+
   </style>
 </head>
 
@@ -107,8 +190,31 @@
     </form>
 
     <div class="f7 tc">
-      <a href="/api/buyers" class="blue dim link">List of Buyers (API)</a> &nbsp; <a href="https://github.com/lishure/Project2" class="blue dim link">GitHub Repo</a>
+      <a href="/api/buyers" class="blue dim link">List of Buyers (API) |</a> &nbsp;
+      <a href="https://github.com/lishure/Project2" class="blue dim link">GitHub Repo |</a> &nbsp;
+      <a href="/api/chat" class="blue dim link">Chat (API)</a>
     </div>
+
+    <!--ROB HTML-->
+
+    <button class="chat-button" onclick="openForm()">Chat!</button>
+
+    <div class="chat-popup" id="chatForm">
+      <form class="form-container">
+        <h1>Chat</h1>
+
+        <label for="email"><b>Email:</b></label>
+        <textarea id="email-text" placeholder="Type email.." required></textarea>
+
+        <label for="msg"><b>Message:</b></label>
+        <textarea id="msg-text" placeholder="Type message.." required></textarea>
+
+        <button type="button" class="btn" onclick="sendInfo()">Send</button>
+        <button type="button" class="btn cancel" onclick="closeForm()">Close</button>
+      </form>
+    </div>
+
+    <!--ROB HTML END-->
 
     <!-- Modal -->
     <div id="results" class="bg-white absolute pa4 z-5 dn"> 
@@ -131,6 +237,39 @@
   <div class="overlay fixed z-1"></div>
 
   <script>
+    ////ROB JS////
+
+    function openForm() {
+      document.getElementById("chatForm").style.display="block"
+    }
+
+    function closeForm() {
+      document.getElementById('chatForm').style.display="none"
+    }
+
+    function sendInfo () {
+      let email = document.getElementById('email-text').value.trim()
+      let msg = document.getElementById('msg-text').value.trim()
+      console.log('email:', email)
+      console.log('Message:', msg)
+
+      const chatData = {
+        email: email,
+        msg: msg
+      }
+              // Post to MySQL DB
+        fetch('/api/chat/', {
+          method: 'post',
+          data: chatData,
+          headers: { 'Content-Type': 'application/json' },
+          body: JSON.stringify(chatData)
+        }).then(res => {
+          console.log(res)
+        })
+    }
+
+    ////ROB JS END////
+
     // Overlay
     const overlay = document.querySelector('.overlay')
     const form = document.querySelector('form')
