--- a/public/home.html
+++ b/public/home.html
@@ -14,6 +14,100 @@
       -webkit-background-size: cover;
       background-size: cover;
     }
+
+    /* ROB CSS */
+  .chat-button {
+  background-color: #00449e;
+  color: white;
+  padding: 16px 20px;
+  border: none;
+  cursor: pointer;
+  opacity: 0.8;
+  position: fixed;
+  bottom: 23px;
+  right: 28px;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%
+}
+
+/* The popup chat - hidden by default */
+.chat-popup {
+  display: none;
+  position: fixed;
+  bottom: 0;
+  right: 15px;
+  border: 3px solid #f1f1f1;
+  z-index: 9;
+  border-radius: 4px
+}
+
+/* Add styles to the form container */
+.form-container {
+  max-width: 300px;
+  padding: 10px;
+  background-color: white;
+}
+
+/* When the textarea gets focus, do something */
+.form-container textarea:focus {
+  background-color: #ddd;
+  outline: none;
+}
+
+#email-text {
+  width: 100%;
+  padding: 15px;
+  margin: 5px 0 10px 0;
+  border: none;
+  background: #f1f1f1;
+  resize: none;
+  min-height: 10px;
+  border-radius: 4px
+}
+
+#msg-text {
+  width: 100%;
+  padding: 15px;
+  margin: 5px 0 10px 0;
+  border: none;
+  background: #f1f1f1;
+  resize: none;
+  min-height: 10px;
+  border-radius: 4px
+}
+/* Set a style for the submit/send button */
+.form-container .btn {
+  background-color: #4CAF50;
+  color: white;
+  padding: 16px 20px;
+  border: none;
+  cursor: pointer;
+  width: 100%;
+  margin-bottom:10px;
+  opacity: 0.8;
+  border-radius: 4px
+}
+
+/* Add a red background color to the cancel button */
+.form-container .cancel {
+  background-color: red; 
+  width: 20px;
+  height: 20px;
+  text-align: center;
+  color: white;
+  padding: 0px;
+  border-radius: 2px;
+  font-size: 13px;
+}
+
+/* Add some hover effects to buttons */
+.form-container .btn:hover, .open-button:hover {
+  opacity: 1;
+}
+
+
+    /* ROB CSS END */
   </style>
 </head>
 
@@ -28,12 +122,69 @@
       <a href="/survey" class="f3 link br-pill ph4 pv3 mb4 dib white bg-dark-blue">
         Start Questionnaire
       </a>
-      <div class="f7 mv4 white">
-        <a href="/api/buyers" class="white dim link">List of Buyers (API)</a> &nbsp; <a href="https://github.com/lishure/Project2"
-          class="white dim link">GitHub Repo</a>
-      </div>
+      <div class="f7 tc">
+          <a href="/api/buyers" class="blue dim link">List of Buyers (API) |</a> &nbsp;
+          <a href="https://github.com/lishure/Project2" class="blue dim link">GitHub Repo |</a> &nbsp;
+          <a href="/api/chat" class="blue dim link">Chat (API)</a>
+        </div>
     </div>
   </section>
+
+      <!--ROB HTML-->
+
+      <button class="chat-button" onclick="openForm()">?</button>
+
+      <div class="chat-popup" id="chatForm">
+        <form class="form-container">
+          <button type="button" class="btn cancel" onclick="closeForm()">X</button>
+          <span id=title >Send us feedback</span>
+          <textarea id="email-text" placeholder="Type email.." name="email" required></textarea>
+          <textarea id="msg-text" placeholder="Type message.." name="msg" required></textarea>
+          <button type="btn" class="btn" onclick="sendInfo()">Send</button>
+        </form>
+      </div>
+  
+      <!--ROB HTML END-->
+
+      <script>
+          ////ROB JS////
+
+    function openForm() {
+      document.getElementById("chatForm").style.display="block"
+    }
+
+    function closeForm() {
+      document.getElementById('chatForm').style.display="none"
+    }
+
+    // function grabs info from both textarea
+    function sendInfo () {
+      let email = document.getElementById('email-text').value.trim()
+      let msg = document.getElementById('msg-text').value.trim()
+      console.log('email:', email)
+      console.log('Message:', msg)
+
+      const chatData = {
+        email: email,
+        msg: msg
+      }
+        // Post to chat table
+        fetch('/api/chat/', {
+          method: 'post',
+          data: chatData,
+          headers: { 'Content-Type': 'application/json' },
+          body: JSON.stringify(chatData)
+        }).then(res => {
+          console.log(res)
+        })
+
+        // Resets textarea
+        document.getElementById('email-text').value = ''
+        document.getElementById('msg-text').value = ''
+    }
+
+    ////ROB JS END////
+      </script>
 
 </body>
 
