--- a/public/entry.html
+++ b/public/entry.html
@@ -131,7 +131,7 @@
             setSelectedIndex(document.querySelector('#creditScore'), creditGrade)
             document.querySelector('#incomeLevel').value = income
             document.querySelector('#downPayment').value = cashdown
-            document.querySelector('#commentsecion').value = commentsection
+            document.querySelector('#commentsection').value = commentsection
           })
         })
 
