changed comment from bootstrap to tachyeon

--- a/public/entry.html
+++ b/public/entry.html
@@ -67,10 +67,11 @@
       <div class="b tc f7">
         Interest Rate % based on 30-Year Fixed: <a href="https://www.navyfederal.org/assets/rates/printMortRatesAll.php" target="_blank" class="blue link">Source</a>
       </div>
-      <div class="form-group">
-        <label for="exampleFormControlTextarea1">Comments</label>
-        <textarea class="form-control " id="commentsection" rows="3"></textarea>
-      </div>
+      <fieldset class="bw0 ph0 pv2 mb2 mh0 w-100">
+        <legend class="b bw0 f6 pa0 ma0">Comments</legend>
+        <input id="commentSection" name="downPayment" class="input-reset ba b--black-20 br2 ph2 pv1 w-100"
+          required>
+      </fieldset>
       <button class="f6 link dim br-pill ph3 pv2 mv4 dib white bg-dark-blue input-reset bw0 pointer w-100"
         id="updateBtn" type="button">Update</button>
     </form>
@@ -116,7 +117,7 @@
             let income = item.income
             let cashdown = item.cashdown
             let budget = item.budget
-            let commentsection = item.commentsection
+            let commentSection = item.commentsection
 
             var setSelectedIndex = (selector, value) => {
               for (let i = 0; i < selector.options.length; i++) {
@@ -131,7 +132,7 @@
             setSelectedIndex(document.querySelector('#creditScore'), creditGrade)
             document.querySelector('#incomeLevel').value = income
             document.querySelector('#downPayment').value = cashdown
-            document.querySelector('#commentsection').value = commentsection
+            document.querySelector('#commentSection').value = commentSection
           })
         })
 
@@ -144,7 +145,7 @@
         const monthlyIncome = document.querySelector('#incomeLevel').value.trim()
         const moneyDown = document.querySelector('#downPayment').value.trim()
         const todaysRate = document.querySelector('#interestRate').value.trim()
-        const commentInput = document.querySelector('#commentsection').value.trim()
+        const commentInput = document.querySelector('#commentSection').value.trim()
 
         // Variables to store mortgage calculator equation
         const decimalRate = todaysRate / 100
