added rate link

--- a/public/survey-form.html
+++ b/public/survey-form.html
@@ -197,18 +197,14 @@
           <a href="https://www.bankrate.com/mortgages/30-year-mortgage-rates" target="_blank" class="bg-green f6 link dim br-pill ph3 pv2 mb2 dib white">Get Today's Rate</a>
         </fieldset>
         <fieldset class="bw0 ph0 pv2 mb2 mh0 w-third">
-          <legend class="b bw0 f6 pa0 ma0">Interest Rate*</legend>
+          <legend class="b bw0 f6 pa0 ma0">Interest Rate*(Based on 30 years fixed)</legend>
           <input type="number" id="interestRate" name="interestRate" class="input-reset ba b--black-20 br2 ph2 pv1 w-100" required>
         </fieldset>
       </div>
       <fieldset class="bw0 ph0 pv2 mb2 mh0 w-100">
         <legend class="b bw0 f6 pa0 ma0">Down Payment*</legend>
         <input type="number" id="downPayment" name="downPayment" class="input-reset ba b--black-20 br2 ph2 pv1 w-100" required>
-      </fieldset>
-      <div class="b tc f7">
-        Interest Rate % based on 30-Year Fixed: <a href="https://www.navyfederal.org/assets/rates/printMortRatesAll.php" target="_blank" class="blue link">Source</a>
-      </div>
-      <fieldset class="bw0 ph0 pv2 mb2 mh0 w-100">
+
         <legend class="b bw0 f6 pa0 ma0">Comments</legend>
         <input id="commentSection" name="downPayment" class="input-reset ba b--black-20 br2 ph2 pv1 w-100"
           required>
