--- a/public/entry.html
+++ b/public/entry.html
@@ -53,6 +53,10 @@
           <input type="number" id="incomeLevel" name="incomeLevel" class="input-reset ba b--black-20 br2 ph2 pv1 w-90"
             required>
         </fieldset>
+        <fieldset class="bw0 ph0 pv2 mb2 mh0 w-20 tc">
+          <legend class="mb1">&nbsp;</legend>
+          <a href="https://www.bankrate.com/mortgages/30-year-mortgage-rates" target="_blank" class="bg-green f6 link dim br-pill ph3 pv2 mb2 dib white">Get Today's Rate</a>
+        </fieldset>
         <fieldset class="bw0 ph0 pv2 mb2 mh0 w-third">
           <legend class="b bw0 f6 pa0 ma0">Interest Rate*</legend>
           <input type="number" id="interestRate" name="interestRate"
