--- a/public/all-entries.html
+++ b/public/all-entries.html
@@ -8,15 +8,18 @@
   <title>Mortgage Calculator: Buyers</title>
   <link rel="stylesheet" href="https://unpkg.com/tachyons@4.10.0/css/tachyons.min.css" />
 </head>
-<div class="jumbotron jumbotron-fluid primary white" id="banner">
-    <div class="container text-center">
-      <br>
-      <h1 class="display-2" style="text-align: center; font-size: 60px">Welcome</h1>
-      <br>
-      <hr>
-    </div>
-  </div>
 <body class="sans-serif">
+    <div class="jumbotron jumbotron-fluid primary white" id="banner">
+        <div class="container text-center">
+          <br>
+          <h1 class="display-2" style="text-align: center; font-size: 60px">Welcome</h1>
+          <br>
+        </div>
+      </div>
+      <br>
+      <a class="btn secondary blue btn-lg" style="float: right; margin-right: 1%" href="/logout">Logout</a>
+      <br>
+      <hr style="height:3px; background-color:gray">
   <div class="overflow-auto">
 
     <table class="f6 w-100 center bg-white" cellspacing="0">
